--- a/src/Pages/Authorization/Authorization.module.scss
+++ b/src/Pages/Authorization/Authorization.module.scss
@@ -39,6 +39,16 @@
             flex-direction: column;
             width: 80%;
 
+            h2 {
+                color: #000000;
+                font-size: 30px;
+                width: 100%;
+                text-align: center;
+                padding-bottom: 60px;
+                font-family: 'Courier New', Courier, monospace;
+
+            }
+
             input {
                 height: 40px;
                 margin-bottom: 20px;
