--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-    background: url('Assets/Images/143788648_ede90800-3eb2-48d2-96f2-8cf04effd44c.jpg'), no-repeat;
+    background-color: black;
     width: 100%;
-    height: 100%;
+    min-height: 800px;
 }
